k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment
  labels:
    app: api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: ghcr.io/emann-salah/garden-api:1be6ac6f9636426cdf4aae2087796e1bc1b7d799

          command:
            - gunicorn
          args:
            - app:app
            - -b
            - 0.0.0.0:80
            - --workers
            - "4"

          ports:
            - containerPort: 80
