k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-deployment
  labels:
    app: web

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: web
          image: ghcr.io/emann-salah/garden-web:1be6ac6f9636426cdf4aae2087796e1bc1b7d799

          ports:
            - containerPort: 8080

          command:
            - npm

          args:
            - run
            - serve
            - --
            - --host
            - 0.0.0.0
