k8s/web-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service

spec:
  type: NodePort

  selector:
    app: web

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
